[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/SupportScenes/Spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SupportScenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/CrosshairCross.png" type="Texture" id=3]
[ext_resource path="res://Assets/ShootAreaCircle.png" type="Texture" id=4]
[ext_resource path="res://Assets/CrosshairCircle.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 0, 5, 0, 2.5, -2.5, 0, 2, -5, 0, -2, -5, 0, -2.5, -2.5, 0, 0, -4, 1, 0, -4, -1, 0, 1, 0.8, 0, 1, -0.8 )

[sub_resource type="ConvexPolygonShape" id=2]

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 0, 0, 0, 12400, 10000, 7000, 12400, 10000, -7000, -12400, 10000, 7000, -12400, 10000, -7000 )

[node name="Player" type="RigidBody"]
collision_mask = 7
mass = 1000.0
can_sleep = false
script = ExtResource( 2 )

[node name="Spaceship" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3.75, 0 )
far = 100000.0

[node name="ShootArea" type="Area" parent="Camera"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/ShootArea"]
shape = SubResource( 2 )

[node name="VisionArea" type="Area" parent="Camera"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Camera/VisionArea"]
shape = SubResource( 3 )

[node name="CrosshairCircle" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrosshairCross" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootAreaCircle" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -70.0
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
